--- a/index.html
+++ b/index.html
@@ -4,10 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/styles.css">
     <title>שיעור קריאה בטעמים</title>
 </head>
 <body>
     <h1>שיעורי קריאה בתורה בטעמים</h1>
-    
+    <div class="sar">
+        <a href="bereshit.html" class="sarg">לחומש בראשית</a>
+        <br><br>
+        <a href="shmot.html" class="sarg">לחומש שמות</a>
+        <br><br>
+        <a href="vaikra.html" class="sarg">לחומש ויקרא</a>
+        <br><br>
+        <a href="dvarim.html" class="sarg">לחומש דברים</a>
+        <br><br>
+        <a href="megila.html" class="sarg">למגילת אסתר</a>
+    </div>
 </body>
 </html>
