--- a/bereshit.html
+++ b/bereshit.html
@@ -11,7 +11,7 @@
     <h1>שיעורי קריאה בתורה בטעמים</h1>
     <h2>חומש בראשית</h2>
     <div class="sar">
-        <a href="/bereshit/p_vaigash.html" class="sarg">פרשת ויגש</a>
+        <a href="/bereshit/p_vaigash" class="sarg">פרשת ויגש</a>
     </div>
 </body>
 </html>
