--- a/bereshit/p_vaigash.html
+++ b/bereshit/p_vaigash.html
@@ -10,13 +10,13 @@
 <body>
     <h1>שיעורי קריאה בתורה בטעמים</h1>
     <div class="sar">
-        <a href="p_vaigash/rishon.html" class="sarg">ראשון</a>
+        <a href="p_vaigash/rishon" class="sarg">ראשון</a>
         <br><br>
-        <a href="sheni.html" class="sarg">שני</a>
+        <a href="sheni" class="sarg">שני</a>
         <br><br>
-        <a href="shlishi.html" class="sarg">שלישי</a>
+        <a href="shlishi" class="sarg">שלישי</a>
         <br><br>
-        <a href="reviy.html" class="sarg">רביעי</a>
+        <a href="reviy" class="sarg">רביעי</a>
     </div>
 </body>
 </html>
