--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 <body>
     <h1>שיעורי קריאה בתורה בטעמים</h1>
     <div class="sar">
-        <a href="bereshit.html" class="sarg">לחומש בראשית</a>
+        <a href="bereshit" class="sarg">לחומש בראשית</a>
         <br><br>
-        <a href="shmot.html" class="sarg">לחומש שמות</a>
+        <a href="shmot" class="sarg">לחומש שמות</a>
         <br><br>
-        <a href="vaikra.html" class="sarg">לחומש ויקרא</a>
+        <a href="vaikra" class="sarg">לחומש ויקרא</a>
         <br><br>
-        <a href="dvarim.html" class="sarg">לחומש דברים</a>
+        <a href="dvarim" class="sarg">לחומש דברים</a>
         <br><br>
-        <a href="megila.html" class="sarg">למגילת אסתר</a>
+        <a href="megila" class="sarg">למגילת אסתר</a>
     </div>
 </body>
 </html>
