--- a/404.html
+++ b/404.html
@@ -11,6 +11,6 @@
     <h1>שיעורי קריאה בתורה בטעמים</h1>
     <h2>שגיאה: 404</h2>
     <h5>העמוד הזה לא קיים או שעדיין לא נוצר</h5>
-    <a href="/" class="sarg">לחזרה לעמוד הבית</a>
+    <a href="/">לחזרה לעמוד הבית</a>
 </body>
 </html>
