--- a/bereshit/p_vaigash/rishon.html
+++ b/bereshit/p_vaigash/rishon.html
@@ -13,7 +13,7 @@
     <h3>ראשון</h3>
     <div class="sar">
         <h5>'י"ח - כ</h5>
-        <video src="/videos/be,44,18-20.MOV" controls="show"></video>
+        <video src="/videos/be,44,18-20.mp4" controls="show"></video>
         <br><br>
         <h5>כ"א - כ"ד</h5>
         <video src="/videos/be,44,21-24.MOV"></video>
