--- a/bereshit/p_vaigash/rishon.html
+++ b/bereshit/p_vaigash/rishon.html
@@ -16,7 +16,7 @@
         <video src="/videos/be,44,18-20.mp4" controls="show"></video>
         <br><br>
         <h5>כ"א - כ"ד</h5>
-        <video src="/videos/be,44,21-24.MOV"></video>
+        <video src="/videos/be,44,21-24.mp4"></video>
     </div>
 </body>
 </html>
